# hrank

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
hrank/connected_cells_in_grid/: connected_cells_in_grid.py
hrank/connected_cells_in_grid/tests/: test_connected_cells_in_grid.py  test_suits.py
hrank/connected_cells_in_grid/tests/fixtures/: sample_1.txt
hrank/larry_s_array/: larry_s_array.py
hrank/larry_s_array/tests/: test_larry_s_array.py  test_suits.py
hrank/pairs/: pairs.py
hrank/pairs/tests/: test_pairs.py  test_suits.py
hrank/queens_attack_2/: queens_attack.py
hrank/queens_attack_2/tests/: test_queens_attack.py  test_suits.py
hrank/queens_on_board/: queens_on_board.py
hrank/queens_on_board/tests/: test_queens_on_board.py  test_suits.py
hrank/stock_maximize/: stock_maximize.py
hrank/stock_maximize/tests/: test_stock_maximize.py  test_suits.py
hrank/string_reduction/: string_reduction.py
hrank/string_reduction/tests/: test_string_reduction.py  test_suits.py
hrank/summing_pieces/: summing_pieces.md  summing_pieces.py
hrank/summing_pieces/tests/: test_suits.py  test_summing_pieces.py
